--- a/microservice/Dockerfile
+++ b/microservice/Dockerfile
@@ -1,84 +1,70 @@
-# Use the official CUDA 12.1 image with Ubuntu 22.04 as the base image
+# Используем официальный CUDA образ с минимальными зависимостями
 FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
+
 LABEL authors="kalinin"
 
-# Set environment variables
-ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=UTC
+# Установка переменных окружения
+ENV DEBIAN_FRONTEND=noninteractive \
+    TZ=UTC \
+    CUDA_HOME=/usr/local/cuda \
+    PATH=$CUDA_HOME/bin:$PATH \
+    LD_LIBRARY_PATH=$CUDA_HOME/lib64:$LD_LIBRARY_PATH
 
-# Update packages and install necessary dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    wget \
-    git \
-    gnupg \
-    lsb-release \
-    python3 \
-    python3-pip \
-    python3-dev \
-    build-essential \
-    cuda-toolkit-12-1 \
-    cuda-runtime-12-1 \
-    cuda-cudart-dev-12-1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set CUDA paths
-ENV CUDA_HOME=/usr/local/cuda
-ENV PATH=$CUDA_HOME/bin:$PATH
-ENV LD_LIBRARY_PATH=$CUDA_HOME/lib64:$LD_LIBRARY_PATH
-
-# Add the NVIDIA TensorRT GPG key and install JNA
-RUN wget -O - https://nvidia.github.io/libnvidia-container/gpgkey | apt-key add - && \
-    wget https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar && \
-    mkdir -p /usr/share/java && mv jna-5.6.0.jar /usr/share/java/
-
-# Install TensorRT
-RUN apt-get update && apt-get install -y \
+# Установка зависимостей в одну команду для уменьшения слоев
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl wget git gnupg lsb-release \
+    python3 python3-pip python3-dev build-essential \
+    cuda-toolkit-12-1 cuda-runtime-12-1 cuda-cudart-dev-12-1 \
     libnvidia-container-tools \
-    python3-libnvinfer \
-    python3-libnvinfer-dev \
+    python3-libnvinfer python3-libnvinfer-dev \
     tensorrt \
     && rm -rf /var/lib/apt/lists/*
 
-# Create app directory and set working directory
+# Установка ключа и JNA в одной команде
+RUN wget -O - https://nvidia.github.io/libnvidia-container/gpgkey | apt-key add - \
+    && mkdir -p /usr/share/java \
+    && wget -O /usr/share/java/jna-5.6.0.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar
+
+# Установка рабочей директории
 WORKDIR /app
 
-# Install necessary Python packages
-RUN pip3 install packaging setuptools wheel ninja
+# Установка Python-зависимостей 
+RUN pip3 install --no-cache-dir \
+    packaging setuptools wheel ninja
 
-# Копируем requirements и устанавливаем
-COPY requirements.txt .
-RUN pip3 install -r requirements.txt
+# Копирование и установка requirements
+COPY microservice/requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
 
-# Install PyTorch with CUDA support
-RUN pip3 install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu121
+# Установка PyTorch с поддержкой CUDA
+RUN pip3 install --no-cache-dir \
+    torch torchvision --extra-index-url https://download.pytorch.org/whl/cu121
 
-# Clone and install torch2trt (without plugins to avoid compilation issues)
-RUN git clone https://github.com/NVIDIA-AI-IOT/torch2trt && \
-    cd torch2trt && \
-    pip3 install -e . && \
-    cd .. && \
-    rm -rf torch2trt
+# Клонирование и установка библиотек в одном слое
+RUN git clone https://github.com/NVIDIA-AI-IOT/torch2trt \
+    && cd torch2trt \
+    && pip3 install -e . \
+    && cd .. \
+    && rm -rf torch2trt \
+    && git clone https://github.com/NVIDIA-AI-IOT/trt_pose \
+    && cd trt_pose \
+    && python3 setup.py install \
+    && cd .. \
+    && rm -rf trt_pose
 
-# Clone and install trt_pose manually
-RUN git clone https://github.com/NVIDIA-AI-IOT/trt_pose && \
-    cd trt_pose && \
-    python3 setup.py install && \
-    cd .. && \
-    rm -rf trt_pose
+# Клонирование репозитория securesight
+RUN git clone https://github.com/Gerrux/securesight.git \
+    && mv securesight/microservice/* . \
+    && rm -rf securesight
 
-# Clone the securesight repository
-RUN git clone https://github.com/Gerrux/securesight.git && \
-    mv securesight/microservice/* . && \
-    rm -rf securesight
-
-RUN pip3 install --upgrade \
+# Финальные обновления пакетов
+RUN pip3 install --no-cache-dir --upgrade \
     sympy==1.13.1 \
     typing-extensions>=4.10.0 \
     pip setuptools wheel
 
-# Expose the port for the FastAPI application
+# Открытие порта
 EXPOSE 9000
 
-# Start the FastAPI application
+# Команда запуска
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9000"]
