huge docker build optimizations, fixes

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,14 @@
 .git
-.gitignore
-*.md
-node_modules
+.github
 __pycache__
 *.pyc
-.env
-.venv
+*.pyo
+*.pyd
+.Python
 env/
 venv/
-frontend/node_modules
-backend/db.sqlite3
+.env
+*.log
+.DS_Store
+node_modules/
+npm-debug.log
