--- a/microservice/Dockerfile
+++ b/microservice/Dockerfile
@@ -1,70 +1,83 @@
-# Используем официальный CUDA образ с минимальными зависимостями
-FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04
+# Этап 1: Base dependencies
+FROM nvcr.io/nvidia/tensorrt:23.12-py3 AS base
 
-LABEL authors="kalinin"
-
-# Установка переменных окружения
+# Устанавливаем переменные окружения для CUDA и других параметров
 ENV DEBIAN_FRONTEND=noninteractive \
     TZ=UTC \
-    CUDA_HOME=/usr/local/cuda \
-    PATH=$CUDA_HOME/bin:$PATH \
-    LD_LIBRARY_PATH=$CUDA_HOME/lib64:$LD_LIBRARY_PATH
+    UV_HTTP_TIMEOUT=600 \
+    UV_CACHE_DIR=/app/.uv_cache \
+    PATH=/usr/local/cuda/bin:$PATH \
+    CUDA_INC_DIR=/usr/local/cuda/include \
+    CUDA_LIB_DIR=/usr/local/cuda/lib64
 
-# Установка зависимостей в одну команду для уменьшения слоев
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl wget git gnupg lsb-release \
-    python3 python3-pip python3-dev build-essential \
-    cuda-toolkit-12-1 cuda-runtime-12-1 cuda-cudart-dev-12-1 \
-    libnvidia-container-tools \
-    python3-libnvinfer python3-libnvinfer-dev \
-    tensorrt \
-    && rm -rf /var/lib/apt/lists/*
-
-# Установка ключа и JNA в одной команде
-RUN wget -O - https://nvidia.github.io/libnvidia-container/gpgkey | apt-key add - \
-    && mkdir -p /usr/share/java \
-    && wget -O /usr/share/java/jna-5.6.0.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar
-
-# Установка рабочей директории
 WORKDIR /app
 
-# Установка Python-зависимостей 
-RUN pip3 install --no-cache-dir \
-    packaging setuptools wheel ninja
+# Установка базовых системных зависимостей
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl wget git lsb-release \
+    python3-pip python3-dev build-essential \
+    libgl1 libglib2.0-0 \
+    && mkdir -p /usr/share/java \
+    && wget -O /usr/share/java/jna-5.6.0.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar \
+    && pip3 install --no-cache-dir uv \
+    && rm -rf /var/lib/apt/lists/* /root/.cache/pip
 
-# Копирование и установка requirements
+# Этап 2: Python dependencies
+FROM base AS python-deps
+
+# Копируем и устанавливаем зависимости с разделением на базовые и основные
 COPY microservice/requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN uv pip install --system \
+    packaging setuptools wheel ninja \
+    --no-cache-dir \
+    --cache-dir ${UV_CACHE_DIR} \
+    && uv pip install --system \
+    -r requirements.txt \
+    --no-cache-dir \
+    --cache-dir ${UV_CACHE_DIR}
 
-# Установка PyTorch с поддержкой CUDA
-RUN pip3 install --no-cache-dir \
-    torch torchvision --extra-index-url https://download.pytorch.org/whl/cu121
+# Этап 3: Репозитории и ML зависимости
+FROM python-deps AS repo-cache
+ARG TORCH_VERSION=2.3.0+cu118
+ARG TORCHVISION_VERSION=0.18.0+cu118
 
-# Клонирование и установка библиотек в одном слое
-RUN git clone https://github.com/NVIDIA-AI-IOT/torch2trt \
-    && cd torch2trt \
-    && pip3 install -e . \
-    && cd .. \
-    && rm -rf torch2trt \
-    && git clone https://github.com/NVIDIA-AI-IOT/trt_pose \
-    && cd trt_pose \
-    && python3 setup.py install \
-    && cd .. \
-    && rm -rf trt_pose
+# Установка PyTorch с явным указанием версий
+RUN uv pip install --system \
+    torch==${TORCH_VERSION} \
+    torchvision==${TORCHVISION_VERSION} \
+    --extra-index-url https://download.pytorch.org/whl/cu118 \
+    --no-cache-dir \
+    --cache-dir ${UV_CACHE_DIR}
 
-# Клонирование репозитория securesight
-RUN git clone https://github.com/imAmachine/securesight.git \
-    && mv securesight/microservice/* . \
-    && rm -rf securesight
+# Клонирование репозиториев
+RUN git clone --depth=1 https://github.com/NVIDIA-AI-IOT/torch2trt && \
+    git clone --depth=1 https://github.com/NVIDIA-AI-IOT/trt_pose
 
-# Финальные обновления пакетов
-RUN pip3 install --no-cache-dir --upgrade \
+# Этап 4: Сборка ML компонентов
+FROM repo-cache AS ml-build
+
+# Установка библиотек с параллельной сборкой
+RUN cd torch2trt && \
+    uv pip install --system -e . --no-build-isolation \
+    && cd ../trt_pose && \
+    uv pip install --system -e . --no-build-isolation
+
+# Финализация зависимостей
+RUN uv pip install --system --no-cache-dir --upgrade \
     sympy==1.13.1 \
-    typing-extensions>=4.10.0 \
-    pip setuptools wheel
+    typing-extensions>=4.10.0
 
-# Открытие порта
+# Этап 5: Финальный образ
+FROM nvcr.io/nvidia/tensorrt:23.12-py3 AS final
+
+WORKDIR /app
+
+# Копируем только необходимые артефакты из предыдущего этапа
+COPY --from=ml-build /usr/local/lib/python3.10/dist-packages /usr/local/lib/python3.10/dist-packages
+COPY --from=ml-build /app/torch2trt /app/torch2trt
+COPY --from=ml-build /app/trt_pose /app/trt_pose
+COPY microservice/ .
+
 EXPOSE 9000
 
-# Команда запуска
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9000"]
