--- a/microservice/app/src/configs/infer_trtpose_deepsort_dnn.yaml
+++ b/microservice/app/src/configs/infer_trtpose_deepsort_dnn.yaml
@@ -1,4 +1,4 @@
-weight_root: &weight_root app\src\weights
+weight_root: &weight_root app/src/weights
 
 # for pose estimation
 POSE:
@@ -9,7 +9,7 @@ POSE:
     - *weight_root
     - pose_estimation
     - trtpose
-    - densenet121_baseline_att_256x256_B_epoch_160.pth # change if you convert tensorrt model
+    - densenet121_baseline_att_256x256_B_epoch_160_256x256.trt
   ## below settings are needed to filter bad(fewer) person keypoints
   min_total_joints: 5
   min_leg_joints: 1
