--- a/microservice/Dockerfile
+++ b/microservice/Dockerfile
@@ -12,74 +12,87 @@ ENV DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /app
 
-# Установка базовых системных зависимостей
+# Установка базовых системных зависимостей и кастомного pip-обёртки "uv"
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl wget git lsb-release \
     python3-pip python3-dev build-essential \
-    libgl1 libglib2.0-0 \
+    libgl1-mesa-glx libglib2.0-0 \
     && mkdir -p /usr/share/java \
-    && wget -O /usr/share/java/jna-5.6.0.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar \
+    && wget -O /usr/share/java/jna-5.6.0.jar \
+         https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.6.0/jna-5.6.0.jar \
     && pip3 install --no-cache-dir uv \
     && rm -rf /var/lib/apt/lists/* /root/.cache/pip
 
+# -----------------------------------------------------------------------------
 # Этап 2: Python dependencies
 FROM base AS python-deps
 
-# Копирование и установка зависимостей с разделением на базовые и основные
+# Копирование файла зависимостей Python
 COPY microservice/requirements.txt .
-RUN uv pip install --system \
-    packaging setuptools wheel ninja \
-    --no-cache-dir \
-    --cache-dir ${UV_CACHE_DIR} \
-    && uv pip install --system \
-    -r requirements.txt \
-    --no-cache-dir \
-    --cache-dir ${UV_CACHE_DIR}
 
+# Установка дополнительных пакетов и зависимостей из requirements.txt
+RUN uv pip install --system --no-cache-dir \
+    packaging setuptools wheel ninja && \
+    uv pip install --system --no-cache-dir -r requirements.txt
+
+# -----------------------------------------------------------------------------
 # Этап 3: Репозитории и ML зависимости
 FROM python-deps AS repo-cache
 ARG TORCH_VERSION=2.3.0+cu118
 ARG TORCHVISION_VERSION=0.18.0+cu118
 
-# Установка PyTorch с явным указанием версий
-RUN uv pip install --system \
-    torch==${TORCH_VERSION} \
-    torchvision==${TORCHVISION_VERSION} \
-    --extra-index-url https://download.pytorch.org/whl/cu118 \
-    --no-cache-dir \
-    --cache-dir ${UV_CACHE_DIR}
+# Установка PyTorch с нужными версиями
+RUN uv pip install --system --no-cache-dir \
+    torch==${TORCH_VERSION} torchvision==${TORCHVISION_VERSION} \
+    --extra-index-url https://download.pytorch.org/whl/cu118
 
-# Клонирование репозиториев
+# Клонирование ML репозиториев в рабочую директорию (/app)
 RUN git clone --depth=1 https://github.com/NVIDIA-AI-IOT/torch2trt && \
     git clone --depth=1 https://github.com/NVIDIA-AI-IOT/trt_pose
 
-# Этап 4: Сборка ML компонентов
+# -----------------------------------------------------------------------------
+# Этап 4: Сборка ML компонентов и генерация wheel-архивов
 FROM repo-cache AS ml-build
 
-# Установка библиотек с параллельной сборкой
-RUN cd torch2trt && \
-    uv pip install --system -e . --no-build-isolation \
-    && cd ../trt_pose && \
-    uv pip install --system -e . --no-build-isolation
+# Объединяем сборку wheel-файлов для torch2trt и trt_pose в один RUN-команду
+RUN mkdir -p /wheels && \
+    for repo in torch2trt trt_pose; do \
+        cd $repo && \
+        python setup.py bdist_wheel && \
+        cp dist/*.whl /wheels/ && \
+        cd ..; \
+    done
 
-# Финализация зависимостей
-RUN uv pip install --system --no-cache-dir --upgrade \
-    sympy==1.13.1 \
-    typing-extensions>=4.10.0
-
+# -----------------------------------------------------------------------------
 # Этап 5: Финальный образ
 FROM nvcr.io/nvidia/tensorrt:23.12-py3 AS final
 
+# Системные библиотеки, необходимые для корректной работы OpenCV (cv2)
+RUN apt-get update && apt-get install -y --no-install-recommends libgl1-mesa-glx && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-# Копирование артефактов из предыдущего этапа
-COPY --from=ml-build /usr/local/lib/python3.10/dist-packages /usr/local/lib/python3.10/dist-packages
-COPY --from=ml-build /app/torch2trt /app/torch2trt
-COPY --from=ml-build /app/trt_pose /app/trt_pose
+# Копируем файл с зависимостями и исходники
+COPY microservice/requirements.txt .
+COPY --from=ml-build /wheels /wheels
 COPY microservice/ .
 
-# Устанавка Uvicorn в финальном образе
-RUN uv pip install --system --no-cache-dir uvicorn
+ARG TORCH_VERSION=2.3.0+cu118
+ARG TORCHVISION_VERSION=0.18.0+cu118
+
+# Объединяем установку зависимостей в один RUN для уменьшения числа слоёв
+RUN pip3 install --no-cache-dir uv && \
+    uv pip install --system --no-cache-dir -r requirements.txt && \
+    uv pip install --system --no-cache-dir torch==${TORCH_VERSION} \
+         torchvision==${TORCHVISION_VERSION} \
+         --extra-index-url https://download.pytorch.org/whl/cu118 && \
+    pip3 install --no-cache-dir /wheels/*.whl && \
+    uv pip install --system --no-cache-dir uvicorn
+
+# Создаем непользовательский аккаунт для повышения безопасности
+RUN useradd -m appuser && chown -R appuser /app
+USER appuser
 
 EXPOSE 9000
 
